<resources>
    <string name="app_name">New Superapp Pro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!--  old app strings-->
    <string name="uploadImage">Upload image</string>
    <array name="pickerArray">
        <item>Camera</item>
        <item>Gallery</item>
    </array>
    <string name="storagePermissionNotGranted">Please allow SuperApp to access your storage from setting.</string>
    <string name="error500">Got 500 Error, please try again</string>
    <string name="error">Please try again after some time.</string>


    <!-- Login and registration screens-->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="newtoapp">Are you new to the App? </string>
    <string name="registernow">" Register Now!"</string>
    <string name="registeras">What do you want to register as?</string>
    <string name="tandc">By registering. I accept Super App Pro\'s <![CDATA[<b><font color=#046cbd>Terms of Service</font></b>]]> and <![CDATA[<b><font color=#046cbd>Privacy Policy</font></b>]]></string>
    <string name="changepassword">Change Password</string>
    <string name="name">Name</string>
    <string name="companyname">Company name</string>
    <string name="mobileno">Mobile No.</string>
    <string name="email">Email id</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="salescode">Sales Code(Optional)</string>
    <string name="register">Register</string>
    <string name="project_owner">PROJECT OWNER</string>
    <string name="client">CLIENT</string>
    <string name="coworker">CO-WORKER</string>
    <string name="forget_pass_string">Enter your email below to receive your password reset instructions</string>
    <string name="forgetbutton">SEND</string>
    <string name="newpassword">Enter New Password</string>
    <string name="submit">SUBMIT</string>
    <string name="freesubscription">Free Subscription</string>
    <string name="rupees">\u20B9499</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="alreadyreg">ALREADY REGISTERED?</string>
    <string name="alreadyreg_login">" LOGIN"</string>
    <string name="requiredMobileNo">Please Enter Mobile No.</string>
    <string name="invalidMobileNo">Please Enter Valid Mobile No.</string>
    <string name="requiredPassword">Please Enter Password</string>
    <string name="registration">Registration</string>
    <string name="requiredName">Please Enter Your Name</string>
    <string name="company_name">Please Enter Company Name</string>
    <string name="emailid">Please Enter Valid Email Id</string>
    <string name="noMatchPassword">Your password and confirmation password do not match</string>
    <string name="forgetpass">Forgot password</string>
    <string name="forgotpassvalidation">Please Enter Username</string>
    <string name="otpstring">We have sent an OTP on your number</string>
    <string name="notreceivecode">Didn\'t receive the verification code?</string>
    <string name="resendcode">" Resend Code"</string>
    <string name="verify">VERIFY</string>
    <string name="verified">Verified!</string>
    <string name="verified_success">Your number has been successfully verified!</string>
    <string name="ok">OK</string>
    <string name="enterotp">Please Enter OTP</string>
    <string name="invalidotp">Invalid OTP</string>
    <string name="verification">Verification</string>
    <string name="confirmpassword">Enter Confirm Password</string>
    <string name="available_balance">Available Balance</string>
    <string name="filter">Filter</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="requestedamt">Requested Amount</string>


    <string name="communication">Communication</string>
    <string name="description">Description</string>
    <string name="material">Material</string>
    <string name="team">TEAM</string>
    <string name="addcomment">Add Comments</string>
    <string name="status">Status</string>
    <string name="update">UPDATE</string>
    <string name="taskname">Task Name</string>
    <string name="categories">Select Category</string>
    <string name="subcategories">Select Sub-Category</string>
    <string name="title">Title</string>
    <string name="allnotes">All Notes</string>
    <string name="done">DONE</string>
    <string name="notes">Notes</string>
    <string name="sketch">Sketch</string>

   <!-- communication and transaction-->
    <string name="amount">Amount</string>
    <string name="addmoney">Add Money</string>
    <string name="amtspenton">Amount spent on</string>
    <string name="category">Category</string>
    <string name="spentamt">Spent Amount</string>
    <string name="uploadpic">Upload picture of material or bill</string>
    <string name="imgdocs">Images and Documents</string>
    <string name="sendrequest">SEND REQUEST</string>
    <string name="request">Request</string>
    <string name="requestto">Request to</string>
    <string name="selectcountry">Select Country</string>

</resources>
