<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layerType="software"
    tools:context=".activity.login.ActivityLogin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/loginbg"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="1"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.3"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:src="@mipmap/login_logo"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt_20"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.7"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_height="wrap_content">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/usernameInputLayout"
                    android:theme="@style/Theme.App.Base"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/username"
                        android:inputType="textNoSuggestions"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:hint="@string/username"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/passwordInputLayout"
                    android:theme="@style/Theme.App.Base"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:imeOptions="actionDone"
                        android:hint="@string/password"
                        android:singleLine="true"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/forgotpass"
                    android:layout_gravity="end"
                    android:textColor="@android:color/white"
                    android:id="@+id/forgotpass"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:layout_height="wrap_content" />

                <Button
                    android:layout_width="match_parent"
                    android:id="@+id/login"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/login_text_color"
                    android:background="@color/login_button_bg"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/newtoapp"
                        android:textColor="@android:color/white"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/registernow"
                        android:text="@string/registernow"
                        android:textColor="@color/registernow"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
