<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.superapp.custom.AutoScrollViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="60dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/login_logo"/>


        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAllCaps="true"/>


    </LinearLayout>-->

    <LinearLayout
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/splashloginborder"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/alreadyreg"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/alreadyreg_login"
                android:textAllCaps="true"
                android:id="@+id/login"
                android:textColor="@color/intro_login"
                android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/register"
        android:background="@color/login_button_bg"
        android:textColor="@color/login_text_color"
        android:text="@string/register"
        android:layout_margin="@dimen/dimen_10"
        android:layout_above="@+id/btn_start"
        android:layout_height="wrap_content" />


    <com.superapp.custom.CirclePageIndicator
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@+id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        app:fillColor="@color/white"
        app:pageColor="@android:color/transparent"
        android:padding="15dip" />
</RelativeLayout>
