<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.ActivityForgotPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/reg_bg"
        android:layout_height="match_parent">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:id="@+id/appbar"
            android:layout_height="wrap_content">


            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:id="@+id/toolbar"
                app:layout_scrollFlags="snap"
                android:layout_height="wrap_content">

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.AppBarLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/appbar"
            android:layout_above="@+id/forgetpass"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                app:cardBackgroundColor="@color/white"
                app:cardUseCompatPadding="true"
                app:cardElevation="@dimen/txt_2"
                android:layout_marginTop="@dimen/dimen_5"
                android:layout_marginLeft="@dimen/dimen_8"
                android:layout_marginRight="@dimen/dimen_8"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:weightSum="3"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_height="0dp">



                        <ImageView
                            android:layout_width="wrap_content"
                            android:src="@mipmap/forgot_password"
                            android:layout_height="wrap_content" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/forgotpass"
                            android:textColor="@color/login_text_color"
                            android:textSize="@dimen/txt_25"
                            android:gravity="center"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/forget_pass_string"
                            android:gravity="center"
                            android:textColor="@color/Reg_hint_color"
                            android:layout_marginLeft="@dimen/dimen_10"
                            android:layout_marginRight="@dimen/dimen_10"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/dimen_10"
                        android:layout_marginRight="@dimen/dimen_10"
                        android:orientation="vertical"
                        android:layout_height="0dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:theme="@style/RegEditTextTheme"
                            android:layout_height="wrap_content">

                            <EditText
                                android:layout_width="match_parent"
                                android:id="@+id/emailid"
                                android:inputType="textEmailAddress"
                                android:imeOptions="actionDone"
                                android:hint="@string/email"
                                android:singleLine="true"
                                android:layout_height="wrap_content" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>


        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/forgetbutton"
            android:id="@+id/forgetpass"
            android:layout_alignParentBottom="true"
            android:textColor="@color/login_text_color"
            android:background="@color/login_button_bg"
            android:layout_height="wrap_content" />



    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
